# geochem_detect

./: .gitignore  Makefile  README.md  mlflow.db  pyproject.toml
.llm/plan/: cnn_sae_plan.md  plan.md
.llm/prompts/: planning
data/gvirm/: Data1.csv  multiclass_clean.csv
data/processed/: Data1.csv  multiclass_clean.csv
scripts/: predict.py  predict_cnn_sae.py  preprocess_data.py  train_autoencoder.py  train_classifier.py  train_cnn_sae.py  train_isolation_forest.py
src/geochem_detect/config/: __init__.py  default_config_autoencoder.yml  default_config_classifier.yml  default_config_cnn_sae.yml  default_config_isolation_forest.yml
src/geochem_detect/models/: autoencoder.py  classifier.py  cnn_sae.py  isolation_forest.py
src/geochem_detect/training/: trainer.py
src/geochem_detect/visualization/: plots.py
