[project]
name = "geochem_detect"
version = "0.1.0"
description = "Anomaly detection and classification of geochemical data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=0.14",
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "tensorflow>=2.15",
    "keras>=2.15",
    "mlflow>=2.11",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "imbalanced-learn>=0.12",
    "shapely>=2.0",
    "pyarrow>=15",
]

[project.optional-dependencies]
dev = ["ipykernel", "jupyter"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geochem_detect"]

[tool.hatch.build.targets.sdist]
include = ["src/"]
